--- a/index.html
+++ b/index.html
@@ -1,1 +1,203 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Form 3 Prefect Duties</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      background: linear-gradient(to right, #e0f7fa, #e1bee7);
+      color: #333;
+      animation: fadeIn 1s ease-in-out;
+    }
+
+    header {
+      background-color: #512da8;
+      color: #fff;
+      padding: 1.5rem 2rem;
+      text-align: center;
+      font-size: 2rem;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .container {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 1rem;
+      background-color: #fff;
+      border-radius: 12px;
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+      animation: slideUp 0.6s ease-in-out;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 1rem;
+    }
+
+    th, td {
+      padding: 1rem;
+      border-bottom: 1px solid #ccc;
+      text-align: left;
+      vertical-align: top;
+    }
+
+    th {
+      background-color: #9575cd;
+      color: white;
+    }
+
+    td ul {
+      margin: 0;
+      padding-left: 1.2rem;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    @keyframes slideUp {
+      from { transform: translateY(20px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    }
+
+    footer {
+      text-align: center;
+      margin-top: 2rem;
+      padding: 1rem;
+      font-size: 0.9rem;
+      color: #666;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    🌟 Form 3 Prefect Weekly Duties 🌟
+  </header>
+
+  <div class="container">
+    <table>
+      <thead>
+        <tr>
+          <th>Prefect Name</th>
+          <th>Assigned Duties</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Prefect 1</td>
+          <td>
+            <ul>
+              <li>Duty A</li>
+              <li>Duty B</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td>Prefect 2</td>
+          <td>
+            <ul>
+              <li>Duty A</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td>Prefect 3</td>
+          <td>
+            <ul>
+              <li>Duty A</li>
+              <li>Duty B</li>
+              <li>Duty C</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td>Prefect 4</td>
+          <td>
+            <ul>
+              <li>Duty A</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td>Prefect 5</td>
+          <td>
+            <ul>
+              <li>Duty A</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td>Prefect 6</td>
+          <td>
+            <ul>
+              <li>Duty A</li>
+              <li>Duty B</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td>Prefect 7</td>
+          <td>
+            <ul>
+              <li>Duty A</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td>Prefect 8</td>
+          <td>
+            <ul>
+              <li>Duty A</li>
+              <li>Duty B</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td>Prefect 9</td>
+          <td>
+            <ul>
+              <li>Duty A</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td>Prefect 10</td>
+          <td>
+            <ul>
+              <li>Duty A</li>
+              <li>Duty B</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td>Prefect 11</td>
+          <td>
+            <ul>
+              <li>Duty A</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td>Prefect 12</td>
+          <td>
+            <ul>
+              <li>Duty A</li>
+              <li>Duty B</li>
+              <li>Duty C</li>
+            </ul>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <footer>
+    Updated weekly • Designed with 💡 by the best AI coder
+  </footer>
+</body>
+</html>
