--- a/index.html
+++ b/index.html
@@ -14,12 +14,33 @@
     }
 
     header {
-      background-color: #512da8;
+      background: linear-gradient(135deg, #7e57c2, #ab47bc);
       color: #fff;
-      padding: 1.5rem 2rem;
+      padding: 2rem 1rem;
       text-align: center;
-      font-size: 2rem;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      font-size: 2.5rem;
+      font-weight: bold;
+      letter-spacing: 1px;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+      position: relative;
+      overflow: hidden;
+    }
+
+    header::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: -50%;
+      width: 200%;
+      height: 100%;
+      background: radial-gradient(circle at center, rgba(255,255,255,0.15), transparent 70%);
+      animation: shimmer 6s infinite;
+    }
+
+    @keyframes shimmer {
+      0% { transform: translateX(-100%); }
+      50% { transform: translateX(100%); }
+      100% { transform: translateX(100%); }
     }
 
     .container {
@@ -43,6 +64,11 @@
       border-bottom: 1px solid #ccc;
       text-align: left;
       vertical-align: top;
+      transition: background-color 0.3s ease;
+    }
+
+    tr:hover td {
+      background-color: #f3e5f5;
     }
 
     th {
@@ -71,6 +97,31 @@
       padding: 1rem;
       font-size: 0.9rem;
       color: #666;
+    }
+
+    @media (max-width: 600px) {
+      header {
+        font-size: 1.8rem;
+        padding: 1.2rem;
+      }
+
+      th, td {
+        display: block;
+        width: 100%;
+        box-sizing: border-box;
+      }
+
+      tr {
+        margin-bottom: 1rem;
+        display: block;
+        border: 1px solid #ddd;
+        border-radius: 10px;
+        overflow: hidden;
+      }
+
+      th {
+        background-color: #7e57c2;
+      }
     }
   </style>
 </head>
