--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
   </div>
 
   <footer>
-    Updated weekly • Designed with 💡 by the best AI coder
+    Updated weekly • Made by Tan Sebastian 😄
   </footer>
 </body>
 </html>
