--- a/index.html
+++ b/index.html
@@ -2,253 +2,55 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Form 3 Prefect Duties</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Prefect Duties</title>
+  <script src="https://unpkg.com/tabletop@1.6.0/tabletop.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      background: linear-gradient(to right, #e0f7fa, #e1bee7);
-      color: #333;
-      animation: fadeIn 1s ease-in-out;
+      background: #0f172a;
+      font-family: 'Inter', sans-serif;
     }
-
-    header {
-      background: linear-gradient(135deg, #7e57c2, #ab47bc);
-      color: #fff;
-      padding: 2rem 1rem;
-      text-align: center;
-      font-size: 2.5rem;
-      font-weight: bold;
-      letter-spacing: 1px;
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-      position: relative;
-      overflow: hidden;
+    .card {
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
-
-    header::after {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: -50%;
-      width: 200%;
-      height: 100%;
-      background: radial-gradient(circle at center, rgba(255,255,255,0.15), transparent 70%);
-      animation: shimmer 6s infinite;
-    }
-
-    @keyframes shimmer {
-      0% { transform: translateX(-100%); }
-      50% { transform: translateX(100%); }
-      100% { transform: translateX(100%); }
-    }
-
-    .container {
-      max-width: 900px;
-      margin: 2rem auto;
-      padding: 1rem;
-      background-color: #fff;
-      border-radius: 12px;
-      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-      animation: slideUp 0.6s ease-in-out;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 1rem;
-    }
-
-    th, td {
-      padding: 1rem;
-      border-bottom: 1px solid #ccc;
-      text-align: left;
-      vertical-align: top;
-      transition: background-color 0.3s ease;
-    }
-
-    tr:hover td {
-      background-color: #f3e5f5;
-    }
-
-    th {
-      background-color: #9575cd;
-      color: white;
-    }
-
-    td ul {
-      margin: 0;
-      padding-left: 1.2rem;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-
-    @keyframes slideUp {
-      from { transform: translateY(20px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
-    }
-
-    footer {
-      text-align: center;
-      margin-top: 2rem;
-      padding: 1rem;
-      font-size: 0.9rem;
-      color: #666;
-    }
-
-    @media (max-width: 600px) {
-      header {
-        font-size: 1.8rem;
-        padding: 1.2rem;
-      }
-
-      th, td {
-        display: block;
-        width: 100%;
-        box-sizing: border-box;
-      }
-
-      tr {
-        margin-bottom: 1rem;
-        display: block;
-        border: 1px solid #ddd;
-        border-radius: 10px;
-        overflow: hidden;
-      }
-
-      th {
-        background-color: #7e57c2;
-      }
+    .card:hover {
+      transform: scale(1.03);
+      box-shadow: 0 10px 20px rgba(255, 255, 255, 0.1);
     }
   </style>
 </head>
-<body>
-  <header>
-    🌟 Form 3 Prefect Weekly Duties 🌟
-  </header>
+<body class="text-white">
 
-  <div class="container">
-    <table>
-      <thead>
-        <tr>
-          <th>Prefect Name</th>
-          <th>Assigned Duties</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Prefect 1</td>
-          <td>
-            <ul>
-              <li>Duty A</li>
-              <li>Duty B</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Prefect 2</td>
-          <td>
-            <ul>
-              <li>Duty A</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Prefect 3</td>
-          <td>
-            <ul>
-              <li>Duty A</li>
-              <li>Duty B</li>
-              <li>Duty C</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Prefect 4</td>
-          <td>
-            <ul>
-              <li>Duty A</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Prefect 5</td>
-          <td>
-            <ul>
-              <li>Duty A</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Prefect 6</td>
-          <td>
-            <ul>
-              <li>Duty A</li>
-              <li>Duty B</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Prefect 7</td>
-          <td>
-            <ul>
-              <li>Duty A</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Prefect 8</td>
-          <td>
-            <ul>
-              <li>Duty A</li>
-              <li>Duty B</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Prefect 9</td>
-          <td>
-            <ul>
-              <li>Duty A</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Prefect 10</td>
-          <td>
-            <ul>
-              <li>Duty A</li>
-              <li>Duty B</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Prefect 11</td>
-          <td>
-            <ul>
-              <li>Duty A</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Prefect 12</td>
-          <td>
-            <ul>
-              <li>Duty A</li>
-              <li>Duty B</li>
-              <li>Duty C</li>
-            </ul>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+  <div class="min-h-screen p-8">
+    <h1 class="text-4xl font-bold text-center mb-10">🏅 Prefect Duties Dashboard</h1>
+    <div id="duties" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"></div>
   </div>
 
-  <footer>
-    Updated weekly • Made by Tan Sebastian 😄
-  </footer>
+  <script>
+    const publicSpreadsheetURL = 'https://docs.google.com/spreadsheets/d/11pmHt98QliIwLiMnUAesIo-Pq9ZXMvIJ6YgqUOAiIAE/pubhtml';
+
+    function showInfo(data) {
+      const container = document.getElementById('duties');
+      data.forEach(row => {
+        const card = document.createElement('div');
+        card.className = 'card bg-slate-800 rounded-2xl p-6 shadow-md';
+        card.innerHTML = `
+          <h2 class="text-2xl font-semibold mb-2 text-sky-400">${row.Name}</h2>
+          <p class="text-base text-gray-300">${row.Duty}</p>
+        `;
+        container.appendChild(card);
+      });
+    }
+
+    window.addEventListener('DOMContentLoaded', () => {
+      Tabletop.init({
+        key: publicSpreadsheetURL,
+        callback: showInfo,
+        simpleSheet: true
+      });
+    });
+  </script>
+
 </body>
 </html>
