--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Prefect Duties</title>
-  <script src="https://unpkg.com/tabletop@1.6.0/tabletop.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/tabletop@1.5.4/tabletop.min.js"></script>
+
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
