--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     async function fetchSheetData() {
       const sheetId = '11pmHt98QliIwLiMnUAesIo-Pq9ZXMvIJ6YgqUOAiIAE';
       const sheetName = 'Sheet1';
-      const url = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/${sheetName}?alt=json&key=YOUR_GOOGLE_API_KEY`;
+      const url = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/${sheetName}?alt=json&key=AIzaSyBsdyMrJW3RmU7hyYoHh6EpoC_cynXs_7c`;
 
       try {
         const response = await fetch(url);
