--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         const card = document.createElement('div');
         card.className = 'card bg-slate-800 rounded-2xl p-6 shadow-md';
         card.innerHTML = `
-          <h2 class="text-2xl font-semibold mb-2 text-sky-400">${row.Name}</h2>
-          <p class="text-base text-gray-300">${row.Duty}</p>
+          <h2 class="text-2xl font-semibold mb-2 text-sky-400">${row.name}</h2>
+          <p class="text-base text-gray-300">${row.duty}</p>
         `;
         container.appendChild(card);
       });
