--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Prefect Duties</title>
   <!-- ✅ TAILWIND FOR DEVELOPMENT -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdn.jsdelivr.net/npm/tabletop@1.5.4/tabletop.min.js"></script>
+  <!-- ✅ FIXED TABLETOP CDN -->
+  <script src="https://cdn.jsdelivr.net/gh/jsoma/tabletop@1.5.1/src/tabletop.min.js"></script>
   <style>
     body {
       background: #0f172a;
@@ -46,7 +47,7 @@
 
     window.addEventListener('DOMContentLoaded', () => {
       Tabletop.init({
-        key: publicSpreadsheetURL,
+        key:https://docs.google.com/spreadsheets/d/e/2PACX-1vQ5FKkqKpx4DJMFu16zfK5PQvaK3mS4KQsqFTx5p7-cuLvbYC44yzvyXi_T_ap9TPOTjDU58vlHpslu/pubhtmlL,
         callback: showInfo,
         simpleSheet: true
       });
