--- a/index.html
+++ b/index.html
@@ -8,22 +8,36 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
-      background: #0f172a;
+      background-image: url('firebackground.jpg');
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
       font-family: 'Inter', sans-serif;
     }
     .card {
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      background: rgba(255, 255, 255, 0.1);
+      border: 1px solid rgba(255, 255, 255, 0.15);
+      backdrop-filter: blur(6px);
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
     }
     .card:hover {
-      transform: scale(1.03);
-      box-shadow: 0 10px 20px rgba(255, 255, 255, 0.1);
+      transform: scale(1.05) rotate(-0.5deg);
+      box-shadow: 0 0 30px rgba(255, 122, 0, 0.4);
+      border-color: rgba(255, 122, 0, 0.6);
+    }
+    .geo-earth-agate {
+      background: linear-gradient(135deg, #ff6b00 0%, #ffb347 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
   </style>
 </head>
 <body class="text-white">
 
-  <div class="min-h-screen p-8">
-    <h1 class="text-4xl font-bold text-center mb-4">🏅 Prefect Duties Dashboard</h1>
+  <div class="min-h-screen bg-black/60 p-8">
+    <h1 class="text-4xl font-bold text-center mb-10 geo-earth-agate animate-pulse">
+      🏅 Prefect Duties Dashboard
+    </h1>
     <div id="duties" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"></div>
   </div>
 
@@ -41,7 +55,6 @@
           const name = row["Prefect Name"] || "Unnamed Prefect";
           const mainDuty = row["Duty"] || "-";
 
-          // Collect all additional duties from extra columns (e.g., undefined keys)
           const extraDuties = Object.keys(row)
             .filter(key => key !== "Prefect Name" && key !== "Duty" && key !== "" && key !== undefined)
             .map(key => row[key])
@@ -49,14 +62,13 @@
 
           const allDuties = [mainDuty, ...extraDuties].filter(d => d && d.trim() !== "-");
 
-          // Only render if there are actual duties
           if (allDuties.length === 0) return;
 
           const card = document.createElement('div');
-          card.className = 'card bg-slate-800 rounded-2xl p-6 shadow-md';
+          card.className = 'card rounded-2xl p-6 shadow-lg';
           card.innerHTML = `
-            <h2 class="text-2xl font-semibold mb-2 text-sky-400">${name}</h2>
-            <ul class="list-disc list-inside text-gray-300">
+            <h2 class="text-2xl font-bold mb-2 geo-earth-agate">${name}</h2>
+            <ul class="list-disc list-inside text-orange-100">
               ${allDuties.map(d => `<li>${d}</li>`).join('')}
             </ul>
           `;
