--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       font-family: 'Inter', sans-serif;
     }
     .card {
-      background: rgba(255, 255, 255, 0.1);
+      background: rgba(255, 255, 255, 0.2); /* More opaque */
       border: 1px solid rgba(255, 255, 255, 0.15);
       backdrop-filter: blur(6px);
       transition: transform 0.4s ease, box-shadow 0.4s ease;
@@ -34,7 +34,7 @@
 </head>
 <body class="text-white">
 
-  <div class="min-h-screen bg-black/60 p-8">
+  <div class="min-h-screen p-8">
     <h1 class="text-4xl font-bold text-center mb-2 geo-earth-agate animate-pulse">
       🏅 Prefect Duties Dashboard
     </h1>
