--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
 <body class="text-white">
 
   <div class="min-h-screen p-8">
-    <h1 class="text-4xl font-bold text-center mb-2 geo-earth-agate animate-pulse">
-      🏅 Prefect Duties Dashboard
+    <h1 class="text-6xl font-extrabold text-center mb-4 geo-earth-agate animate-pulse drop-shadow-[0_2px_10px_rgba(255,100,0,0.9)]">
+  Seb's F3 Prefect Duties Dashboard
+</h1>
+
+
     </h1>
     <h2 id="week-date" class="text-center text-orange-200 text-lg italic mb-10"></h2>
     <div id="duties" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"></div>
