--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body class="text-white">
 
   <div class="min-h-screen p-8">
-    <h1 class="text-6xl font-extrabold text-center mb-4 geo-earth-agate animate-pulse drop-shadow-[0_2px_10px_rgba(255,100,0,0.9)]">
+    <h1 class="text-6xl font-extrabold text-center mb-4 geo-earth-agate animate-pulse drop-shadow-[0_2px_10px_rgba(100,100,0,0.9)]">
   Seb's F3 Prefect Duties Dashboard
       <h1 class="text-7xl font-extrabold tracking-wider text-center mb-4 geo-earth-agate animate-pulse drop-shadow-[0_2px_12px_rgba(255,100,0,0.9)]">
 
@@ -80,7 +80,7 @@
           card.className = 'card rounded-2xl p-6 shadow-lg';
           card.innerHTML = `
             <h2 class="text-2xl font-bold mb-2 geo-earth-agate">${name}</h2>
-            <ul class="list-disc list-inside text-orange-100">
+            <ul class="list-disc list-inside text-orange-100 text-lg">
               ${allDuties.map(d => `<li>${d}</li>`).join('')}
             </ul>
           `;
