--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <h1 class="text-3xl font-extrabold text-center mb-4 shiny-title animate-pulse tracking-wider">
       Seb's F3 Prefect Duties Dashboard
     </h1>
-    <h2 id="week-date" class="text-center text-orange-200 text-1xl italic mb-10"></h2>
-    <div id="duties" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"></div>
+    <h2 id="week-date" class="text-center text-orange-200 text-xl italic mb-10"></h2>
+    <div id="duties" class="grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 gap-6"></div>
   </div>
 
   <script>
