--- a/index.html
+++ b/index.html
@@ -7,18 +7,29 @@
   <!-- ✅ TAILWIND FOR DEVELOPMENT -->
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      overflow-x: hidden;
+    }
     body {
       background-image: url('firebackground.jpg');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
       font-family: 'Inter', sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
     .card {
       background: rgba(0, 0, 0, 0.6); /* Shiny blackish */
       border: 1px solid rgba(255, 255, 255, 0.15);
       backdrop-filter: blur(6px);
       transition: transform 0.4s ease, box-shadow 0.4s ease;
+      width: 100%;
+      max-width: 400px;
     }
     .card:hover {
       transform: scale(1.05) rotate(-0.5deg);
@@ -49,12 +60,12 @@
 </head>
 <body class="text-white">
 
-  <div class="min-h-screen p-4 sm:p-6 md:p-8">
-    <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-extrabold text-center mb-4 shiny-title animate-pulse tracking-wider">
+  <div class="w-full max-w-screen-sm px-4 pt-6 pb-10">
+    <h1 class="text-3xl sm:text-4xl md:text-5xl font-extrabold text-center mb-4 shiny-title animate-pulse tracking-wider">
       Seb's F3 Prefect Duties Dashboard
     </h1>
-    <h2 id="week-date" class="text-center shiny-subtitle mb-10"></h2>
-    <div id="duties" class="grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 gap-4 sm:gap-6"></div>
+    <h2 id="week-date" class="text-center shiny-subtitle mb-8"></h2>
+    <div id="duties" class="flex flex-col gap-4 items-center"></div>
   </div>
 
   <script>
@@ -72,9 +83,8 @@
         }
 
         const container = document.getElementById('duties');
-        data.forEach((row, index) => {
+        data.forEach((row) => {
           if (!row["Prefect Name"] && !row["Duty"]) return;
-
 
           const name = row["Prefect Name"] || "Unnamed Prefect";
           const mainDuty = row["Duty"] || "-";
@@ -89,10 +99,10 @@
           if (allDuties.length === 0) return;
 
           const card = document.createElement('div');
-          card.className = 'card rounded-2xl p-4 sm:p-6 shadow-lg';
+          card.className = 'card rounded-2xl p-4 shadow-lg';
           card.innerHTML = `
-            <h2 class="text-xl sm:text-2xl font-bold mb-2 geo-earth-agate">${name}</h2>
-            <ul class="list-disc list-inside text-orange-100 text-base sm:text-lg">
+            <h2 class="text-xl font-bold mb-2 geo-earth-agate text-center">${name}</h2>
+            <ul class="list-disc list-inside text-orange-100 text-base">
               ${allDuties.map(d => `<li>${d}</li>`).join('')}
             </ul>
           `;
