--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       margin: 0;
       padding: 0;
       overflow-x: hidden;
+      font-size: 70%;
     }
     body {
       background-image: url('firebackground.jpg');
@@ -40,14 +41,14 @@
       background: linear-gradient(145deg, #000000, #333333);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      font-weight: 400;
+      font-weight: 900;
       text-shadow: 0 2px 10px rgba(0,0,0,0.8);
     }
     .shiny-subtitle {
       background: linear-gradient(to right, #000000, #222222);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      font-weight: 600;
+      font-weight: 700;
       font-size: 1.75rem;
       text-shadow: 0 1px 6px rgba(0,0,0,0.9);
       animation: shimmer 3s ease-in-out infinite;
