--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -43,6 +45,8 @@
       -webkit-text-fill-color: transparent;
       font-weight: 900;
       text-shadow: 0 2px 10px rgba(0,0,0,0.8);
+      font-family: 'Caveat', cursive;
+
     }
     .shiny-subtitle {
       background: linear-gradient(to right, #000000, #222222);
@@ -61,7 +65,7 @@
 </head>
 <body class="text-white">
 
-  <div class="w-full max-w-screen-sm px-4 pt-6 pb-10">
+  <div class="w-full max-w-screen-sm px-4 pt-6 pb-10 text-sm">
     <h1 class="text-3xl sm:text-4xl md:text-5xl font-extrabold text-center mb-4 shiny-title animate-pulse tracking-wider">
       Seb's F3 Prefect Duties Dashboard
     </h1>
